-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.1
-
Windows
-
dff18b8e80609da91bf9e9134967dcf0d23eca9e (qtbase/dev, 5.2.2015, 5.5), Fix.up: 29daa7645b8d93e4a53e8cd85288740a80f441e9 (qtbase/dev, 11.2.2015, 5.5)
This includes qmltestrunner, which removes its arguments from argc/argv before passing them to QCoreApplication. The assertion hit is:
Q_ASSERT(allArguments.size() == origArgc);
in QCoreApplication::arguments().
- relates to
-
QTBUG-36466 Windows/QmlTest: Using the -input argument for tests causes an assert
-
- Closed
-
-
QTBUG-33435 qmltest: If an argument is passed to the test that gets stripped then it will cause an assert in QCoreApplication on Windows
-
- Closed
-
-
QTBUG-25724 Windows: QGuiApplication passes command special command line arguments like -platform, path ,etc on to application
-
- Closed
-
-
QTBUG-67515 MinGW: process fails with wildcards under windows command prompt: ASSERT: "allArguments.size() == d->origArgc" in file kernel/qcoreapplication.cpp, line 2362
-
- Closed
-
-
QTSOLBUG-184 Specified Windows service arguments are not forwarded to the created QCoreApplication
-
- Closed
-
- replaces
-
QTBUG-43238 QCoreApplication::arguments() falsely triggers Q_ASSERT on Windows
-
- Closed
-
- resulted in
-
QTBUG-47023 [Regression] Windows: Crash in QApplication constructor when using wide main passing a fake argv array (console application)
-
- Closed
-
For Gerrit Dashboard: QTBUG-30330 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
103240,7 | Windows: Allow for passing a modified argv to QCoreApplication. | dev | qt/qtbase | Status: MERGED | +2 | 0 |
105750,2 | Windows: Reintroduce copy of argv. | dev | qt/qtbase | Status: MERGED | +2 | 0 |
121156,2 | Windows: Fix crash when using wmain() and passing a fake argv. | 5.5 | qt/qtbase | Status: MERGED | +2 | 0 |